Added activities for the view and modify quiz/question Added quiz and question row for the recycler view

--- a/app/src/main/res/layout/activity_view_quizzes.xml
+++ b/app/src/main/res/layout/activity_view_quizzes.xml
@@ -24,6 +24,15 @@
                 android:backgroundTint="@color/dark_blue"
                 android:text="@string/back" />
 
+            <Button
+                android:id="@+id/VQuizNewQuizBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start|center_vertical"
+                android:layout_marginLeft="6dp"
+                android:backgroundTint="@color/dark_blue"
+                android:text="@string/newQuiz" />
+
         </TableRow>
 
         <TableRow
