--- a/app/src/main/res/layout/activity_view_questions.xml
+++ b/app/src/main/res/layout/activity_view_questions.xml
@@ -24,6 +24,15 @@
                 android:backgroundTint="@color/dark_blue"
                 android:text="@string/back" />
 
+            <Button
+                android:id="@+id/VQuestionNewQuestionBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start|center_vertical"
+                android:layout_marginLeft="6dp"
+                android:backgroundTint="@color/dark_blue"
+                android:text="@string/newQuestion" />
+
         </TableRow>
 
         <TableRow
@@ -48,7 +57,7 @@
             android:gravity="center">
 
             <Button
-                android:id="@+id/VQuizzesQuizPropertiesBtn"
+                android:id="@+id/VQuestionsQuizPropertiesBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center|center_vertical"
