Added functionality for the modify pages

--- a/app/src/main/res/layout/activity_view_questions.xml
+++ b/app/src/main/res/layout/activity_view_questions.xml
@@ -16,22 +16,26 @@
             android:background="@color/yellow">
 
             <Button
+                style="?android:attr/buttonBarButtonStyle"
                 android:id="@+id/VQuestionBackBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="start|center_vertical"
-                android:layout_marginLeft="6dp"
+                android:layout_marginStart="6dp"
                 android:backgroundTint="@color/dark_blue"
-                android:text="@string/back" />
+                android:text="@string/back"
+                android:textColor="@color/white"/>
 
             <Button
+                style="?android:attr/buttonBarButtonStyle"
                 android:id="@+id/VQuestionNewQuestionBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="start|center_vertical"
-                android:layout_marginLeft="6dp"
+                android:layout_marginStart="6dp"
                 android:backgroundTint="@color/dark_blue"
-                android:text="@string/newQuestion" />
+                android:text="@string/newQuestion"
+                android:textColor="@color/white"/>
 
         </TableRow>
 
@@ -41,7 +45,7 @@
             android:layout_weight="4">
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/VQuizzesRecyclerView"
+                android:id="@+id/VQuestionsRecyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginHorizontal="30dp"
@@ -61,7 +65,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center|center_vertical"
-                android:layout_marginLeft="6dp"
                 android:backgroundTint="@color/dark_blue"
                 android:text="@string/quizProps" />
         </TableRow>
