--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,6 +53,23 @@
         </TableRow>
 
         <TableRow
+            android:id="@+id/viewQuizzesRow"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="0.25"
+            android:gravity="center_horizontal">
+
+            <Button
+                android:id="@+id/viewQuizzesBtn"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal|center_vertical"
+                android:backgroundTint="@color/buttonBG"
+                android:text="@string/viewQuizzes"
+                android:textSize="28sp" />
+        </TableRow>
+
+        <TableRow
             android:id="@+id/emptyBottomRow"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
