--- a/app/src/main/res/layout/question_row.xml
+++ b/app/src/main/res/layout/question_row.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/questionRowCardView"
@@ -58,6 +58,7 @@
                     android:gravity="center"
                     android:minHeight="45dp"
                     android:text="@string/fillerQuestion"
+                    android:textColor="@color/black"
                     android:textSize="16sp" />
             </TableRow>
 
