--- a/app/src/main/res/layout/activity_view_quizzes.xml
+++ b/app/src/main/res/layout/activity_view_quizzes.xml
@@ -15,23 +15,31 @@
             android:layout_height="match_parent"
             android:background="@color/yellow">
 
-            <Button
-                android:id="@+id/VQuizBackBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="start|center_vertical"
-                android:layout_marginLeft="6dp"
-                android:backgroundTint="@color/dark_blue"
-                android:text="@string/back" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
 
-            <Button
-                android:id="@+id/VQuizNewQuizBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="start|center_vertical"
-                android:layout_marginLeft="6dp"
-                android:backgroundTint="@color/dark_blue"
-                android:text="@string/newQuiz" />
+                <Button
+                    android:id="@+id/VQuizBackBtn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start|center_vertical"
+                    android:layout_marginStart="6dp"
+                    android:backgroundTint="@color/dark_blue"
+                    android:text="@string/back"
+                    android:textColor="@color/white" />
+
+                <Button
+                    android:id="@+id/VQuizNewQuizBtn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start|center_vertical"
+                    android:layout_marginStart="6dp"
+                    android:backgroundTint="@color/dark_blue"
+                    android:text="@string/newQuiz"
+                    android:textColor="@color/white" />
+            </LinearLayout>
 
         </TableRow>
 
