--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,8 @@
 
     <TableLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/dark_blue">
 
         <TableRow
             android:id="@+id/emptyTopRow"
@@ -27,10 +28,10 @@
                 android:id="@+id/titleTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@color/textBG"
+                android:background="@color/dark_blue"
                 android:text="@string/title"
                 android:textAlignment="center"
-                android:textColor="@color/black"
+                android:textColor="@color/yellow"
                 android:textSize="36sp" />
 
         </TableRow>
@@ -44,6 +45,7 @@
                 android:id="@+id/mainSpinner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@color/white"
                 android:entries="@array/forSpinner"
                 android:textAlignment="center" />
 
@@ -61,9 +63,10 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal|center_vertical"
+                android:backgroundTint="@color/yellow"
                 android:text="@string/start"
-                android:textSize="28sp"
-                android:backgroundTint="@color/buttonBG"/>
+                android:textColor="@color/black"
+                android:textSize="28sp" />
         </TableRow>
 
         <TableRow
@@ -78,8 +81,9 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal|center_vertical"
-                android:backgroundTint="@color/buttonBG"
+                android:backgroundTint="@color/yellow"
                 android:text="@string/viewQuizzes"
+                android:textColor="@color/black"
                 android:textSize="28sp" />
         </TableRow>
 
