--- a/app/src/main/res/layout/activity_modify_question.xml
+++ b/app/src/main/res/layout/activity_modify_question.xml
@@ -22,8 +22,16 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="start|center_vertical"
                 android:layout_marginLeft="6dp"
+                android:layout_span="1"
+                android:layout_weight="1"
                 android:backgroundTint="@color/dark_blue"
-                android:text="@string/back" />
+                android:text="@string/back"
+                android:textColor="@color/white" />
+
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="8" />
 
             <Button
                 android:id="@+id/EQuestionDeleteBtn"
@@ -31,97 +39,122 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="start|center_vertical"
                 android:layout_marginLeft="6dp"
+                android:layout_span="1"
+                android:layout_weight="1"
                 android:backgroundTint="@color/dark_blue"
-                android:text="@string/delete" />
+                android:text="@string/delete"
+                android:textColor="@color/white" />
 
         </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center">
+            android:layout_height="match_parent">
 
             <TextView
                 android:id="@+id/EQuestionQuestionTextView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_span="2"
                 android:layout_weight="1"
-                android:gravity="center"
+                android:gravity="center_horizontal"
                 android:text="@string/question"
+                android:textAlignment="center"
                 android:textColor="@color/black"
                 android:textSize="34sp" />
+
         </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="3"
-            android:gravity="center">
+            android:layout_weight="3">
 
             <EditText
                 android:id="@+id/EQuestionQuestionEditText"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginHorizontal="5dp"
+                android:layout_span="2"
                 android:layout_weight="1"
-                android:ems="10"
                 android:inputType="textPersonName"
-                android:text="@string/fillerQuestion" />
+                android:scrollHorizontally="false"
+                android:singleLine="false"
+                android:text="@string/fillerQuestion"
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textSize="20sp" />
+
         </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:gravity="center">
+            android:gravity="center_vertical">
 
             <TextView
                 android:id="@+id/EQuestionAnswerTextView"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_span="2"
+                android:layout_weight="1"
                 android:text="@string/answer"
                 android:textAlignment="center"
                 android:textColor="@color/black"
                 android:textSize="34sp" />
+
         </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="3"
-            android:gravity="center">
+            android:layout_weight="3">
 
             <EditText
                 android:id="@+id/EQuestionAnswerEditText"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginHorizontal="5dp"
+                android:layout_span="2"
                 android:layout_weight="1"
-                android:ems="10"
                 android:inputType="textPersonName"
-                android:text="@string/answer" />
+                android:scrollHorizontally="false"
+                android:text="@string/answer"
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textSize="20sp" />
+
         </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_weight="1.25"
             android:gravity="center">
-
-            <Button
-                android:id="@+id/EQuestionSaveBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/dark_blue"
-                android:text="@string/save" />
 
             <Button
                 android:id="@+id/EQuestionCancelBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="10dp"
+                android:layout_span="1"
                 android:backgroundTint="@color/dark_blue"
-                android:text="@string/cancel" />
+                android:padding="15dp"
+                android:text="@string/cancel"
+                android:textColor="@color/white"
+                android:textSize="14sp" />
+
+            <Button
+                android:id="@+id/EQuestionSaveBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_span="1"
+                android:backgroundTint="@color/dark_blue"
+                android:padding="15dp"
+                android:text="@string/save"
+                android:textColor="@color/white"
+                android:textSize="14sp" />
+
         </TableRow>
 
     </TableLayout>
