--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -6,54 +6,73 @@
     android:layout_height="match_parent"
     tools:context=".QuestionActivity">
 
-    <LinearLayout
+    <TableLayout
+        android:id="@+id/tableLayout2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:background="@color/white">
 
-        <TextView
-            android:id="@+id/questionTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@color/textBG"
-            android:gravity="end"
-            android:text="@string/question"
-            android:textColor="@color/black" />
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/yellow">
 
-        <TextView
-            android:id="@+id/qFractionTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@color/textBG"
-            android:text="@string/placeholder"
-            android:textColor="@color/black" />
+            <Button
+                android:id="@+id/button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="5dp"
+                android:layout_weight="1"
+                android:backgroundTint="@color/dark_blue"
+                android:text="@string/back"
+                android:textColor="@color/white"
+                android:textSize="14sp" />
 
-        <TextView
-            android:id="@+id/correctTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@color/textBG"
-            android:gravity="end"
-            android:text="@string/correct"
-            android:textColor="@color/black" />
+            <TextView
+                android:id="@+id/questionTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@color/yellow"
+                android:text="@string/question"
+                android:textAlignment="textEnd"
+                android:textColor="@color/black"
+                android:textSize="16sp" />
 
-        <TextView
-            android:id="@+id/correctValueTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@color/textBG"
-            android:text="@string/placeholder"
-            android:textColor="@color/black" />
+            <TextView
+                android:id="@+id/qFractionTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:layout_weight="1"
+                android:background="@color/yellow"
+                android:text="@string/placeholder"
+                android:textColor="@color/black"
+                android:textSize="16sp" />
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/correctTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@color/yellow"
+                android:text="@string/correct"
+                android:textAlignment="textEnd"
+                android:textColor="@color/black"
+                android:textSize="16sp" />
 
-    <TableLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+            <TextView
+                android:id="@+id/correctValueTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:layout_weight="1"
+                android:background="@color/yellow"
+                android:text="@string/placeholder"
+                android:textColor="@color/black"
+                android:textSize="16sp" />
+
+        </TableRow>
 
         <TableRow
             android:id="@+id/questionRow"
@@ -67,8 +86,8 @@
                 android:id="@+id/questionPromptTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_span="2"
-                android:background="@color/textBG"
+                android:layout_span="6"
+                android:background="@color/white"
                 android:gravity="center_horizontal|center_vertical"
                 android:text="@string/fillerQuestion"
                 android:textColor="@color/black"
@@ -79,60 +98,84 @@
             android:id="@+id/firstBtnRow"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="0.75"
-            android:gravity="bottom|center_horizontal">
+            android:layout_weight="0.75">
 
-            <Button
-                android:id="@+id/optionOneBtn"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="10dp"
+                android:layout_span="5"
                 android:layout_weight="1"
-                android:backgroundTint="@color/buttonBG"
-                android:text="@string/option"
-                android:textSize="20sp" />
+                android:orientation="horizontal">
 
-            <Button
-                android:id="@+id/optionTwoBtn"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="20dp"
-                android:layout_weight="1"
-                android:backgroundTint="@color/buttonBG"
-                android:text="@string/option"
-                android:textSize="20sp" />
+                <Button
+                    android:id="@+id/optionOneBtn"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_span="2"
+                    android:layout_weight="1"
+                    android:backgroundTint="@color/dark_blue"
+                    android:text="@string/option"
+                    android:textColor="@color/white"
+                    android:textSize="20sp" />
+
+                <Button
+                    android:id="@+id/optionTwoBtn"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="20dp"
+                    android:layout_span="3"
+                    android:layout_weight="1"
+                    android:backgroundTint="@color/dark_blue"
+                    android:text="@string/option"
+                    android:textColor="@color/white"
+                    android:textSize="20sp" />
+            </LinearLayout>
+
         </TableRow>
 
         <TableRow
             android:id="@+id/secondBtnRow"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="0.75"
-            android:gravity="center_horizontal">
+            android:layout_weight="0.75">
 
-            <Button
-                android:id="@+id/optionThreeBtn"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="10dp"
+                android:layout_span="5"
                 android:layout_weight="1"
-                android:backgroundTint="@color/buttonBG"
-                android:text="@string/option"
-                android:textSize="20sp" />
+                android:orientation="horizontal">
 
-            <Button
-                android:id="@+id/optionFourBtn"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="20dp"
-                android:layout_weight="1"
-                android:backgroundTint="@color/buttonBG"
-                android:text="@string/option"
-                android:textSize="20sp" />
+                <Button
+                    android:id="@+id/optionThreeBtn"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_span="2"
+                    android:layout_weight="1"
+                    android:backgroundTint="@color/dark_blue"
+                    android:text="@string/option"
+                    android:textColor="@color/white"
+                    android:textSize="20sp" />
+
+                <Button
+                    android:id="@+id/optionFourBtn"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="20dp"
+                    android:layout_span="3"
+                    android:layout_weight="1"
+                    android:backgroundTint="@color/dark_blue"
+                    android:text="@string/option"
+                    android:textColor="@color/white"
+                    android:textSize="20sp" />
+            </LinearLayout>
+
         </TableRow>
 
         <TableRow
@@ -146,8 +189,10 @@
                 android:id="@+id/nextBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:backgroundTint="@color/buttonBG"
+                android:layout_span="6"
+                android:backgroundTint="@color/dark_blue"
                 android:text="@string/next"
+                android:textColor="@color/white"
                 android:textSize="14sp"
                 android:visibility="invisible" />
         </TableRow>
