--- a/app/src/main/res/layout/activity_view_questions.xml
+++ b/app/src/main/res/layout/activity_view_questions.xml
@@ -15,33 +15,32 @@
             android:layout_height="match_parent"
             android:background="@color/yellow">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
+            <Button
+                android:id="@+id/VQuestionBackBtn"
+                style="?android:attr/buttonBarButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start|center_vertical"
+                android:layout_marginStart="6dp"
+                android:backgroundTint="@color/dark_blue"
+                android:text="@string/back"
+                android:textColor="@color/white" />
 
-                <Button
-                    android:id="@+id/VQuestionBackBtn"
-                    style="?android:attr/buttonBarButtonStyle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="start|center_vertical"
-                    android:layout_marginStart="6dp"
-                    android:backgroundTint="@color/dark_blue"
-                    android:text="@string/back"
-                    android:textColor="@color/white" />
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
 
-                <Button
-                    android:id="@+id/VQuestionNewQuestionBtn"
-                    style="?android:attr/buttonBarButtonStyle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="start|center_vertical"
-                    android:layout_marginStart="6dp"
-                    android:backgroundTint="@color/dark_blue"
-                    android:text="@string/newQuestion"
-                    android:textColor="@color/white" />
-            </LinearLayout>
+            <Button
+                android:id="@+id/VQuestionNewQuestionBtn"
+                style="?android:attr/buttonBarButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start|center_vertical"
+                android:layout_marginStart="6dp"
+                android:backgroundTint="@color/dark_blue"
+                android:text="@string/newQuestion"
+                android:textColor="@color/white" />
 
         </TableRow>
 
@@ -55,6 +54,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginHorizontal="30dp"
+                android:layout_span="3"
                 android:layout_weight="1"
                 android:background="@color/white" />
 
@@ -71,8 +71,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center|center_vertical"
+                android:layout_span="3"
                 android:backgroundTint="@color/dark_blue"
-                android:text="@string/quizProps" />
+                android:padding="15dp"
+                android:text="@string/quizProps"
+                android:textColor="@color/white"
+                android:textSize="14sp" />
         </TableRow>
 
     </TableLayout>
