--- a/app/src/main/res/layout/activity_view_quizzes.xml
+++ b/app/src/main/res/layout/activity_view_quizzes.xml
@@ -15,44 +15,43 @@
             android:layout_height="match_parent"
             android:background="@color/yellow">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
+            <Button
+                android:id="@+id/VQuizBackBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start|center_vertical"
+                android:layout_marginStart="6dp"
+                android:backgroundTint="@color/dark_blue"
+                android:text="@string/back"
+                android:textColor="@color/white" />
 
-                <Button
-                    android:id="@+id/VQuizBackBtn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="start|center_vertical"
-                    android:layout_marginStart="6dp"
-                    android:backgroundTint="@color/dark_blue"
-                    android:text="@string/back"
-                    android:textColor="@color/white" />
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
 
-                <Button
-                    android:id="@+id/VQuizNewQuizBtn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="start|center_vertical"
-                    android:layout_marginStart="6dp"
-                    android:backgroundTint="@color/dark_blue"
-                    android:text="@string/newQuiz"
-                    android:textColor="@color/white" />
-            </LinearLayout>
+            <Button
+                android:id="@+id/VQuizNewQuizBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start|center_vertical"
+                android:layout_marginStart="6dp"
+                android:backgroundTint="@color/dark_blue"
+                android:text="@string/newQuiz"
+                android:textColor="@color/white" />
 
         </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center">
+            android:layout_height="match_parent">
 
             <TextView
                 android:id="@+id/VQuizSelectQuizTextView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginVertical="30dp"
+                android:layout_span="3"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="@string/selectQuiz"
@@ -70,6 +69,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginHorizontal="30dp"
+                android:layout_span="3"
                 android:layout_weight="1"
                 android:background="@color/white" />
 
@@ -78,7 +78,13 @@
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="0.5" />
+            android:layout_weight="0.5" >
+
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_span="3" />
+        </TableRow>
 
     </TableLayout>
 
