--- a/app/src/main/res/layout/question_row.xml
+++ b/app/src/main/res/layout/question_row.xml
@@ -7,10 +7,14 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/questionRowCardView"
-        android:layout_width="409dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="35dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:background="@color/dark_blue"
         android:backgroundTint="@color/dark_blue"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
