--- a/app/src/main/res/layout/quiz_row.xml
+++ b/app/src/main/res/layout/quiz_row.xml
@@ -9,9 +9,9 @@
         android:id="@+id/quizRowCardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginHorizontal="35dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:background="@color/dark_blue"
         android:backgroundTint="@color/dark_blue"
         app:layout_constraintBottom_toBottomOf="parent"
