--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -18,7 +18,7 @@
             android:background="@color/yellow">
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/questionBackBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="5dp"
