--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,6 +46,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/white"
+                android:dropDownSelector="@color/dark_blue"
                 android:entries="@array/forSpinner"
                 android:textAlignment="center" />
 
