--- a/app/src/main/res/layout/activity_end.xml
+++ b/app/src/main/res/layout/activity_end.xml
@@ -49,7 +49,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:gravity="center_horizontal|top">
+            android:gravity="center">
 
             <TextView
                 android:id="@+id/scoreValueTextView"
@@ -60,6 +60,22 @@
                 android:text="@string/placeholder"
                 android:textColor="@color/yellow"
                 android:textSize="60sp" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center">
+
+            <Button
+                android:id="@+id/endRetryBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/yellow"
+                android:text="@string/retry"
+                android:textColor="@color/dark_blue"
+                android:textSize="20sp" />
         </TableRow>
 
         <TableRow
