added hints and text wrapping

--- a/app/src/main/res/layout/activity_modify_question.xml
+++ b/app/src/main/res/layout/activity_modify_question.xml
@@ -76,7 +76,8 @@
                 android:layout_height="match_parent"
                 android:layout_span="2"
                 android:layout_weight="1"
-                android:inputType="textPersonName"
+                android:hint="@string/enterQuestion"
+                android:inputType="textPersonName|textMultiLine"
                 android:scrollHorizontally="false"
                 android:singleLine="false"
                 android:text="@string/fillerQuestion"
@@ -116,7 +117,8 @@
                 android:layout_height="match_parent"
                 android:layout_span="2"
                 android:layout_weight="1"
-                android:inputType="textPersonName"
+                android:hint="@string/enterAnswer"
+                android:inputType="textPersonName|textMultiLine"
                 android:scrollHorizontally="false"
                 android:text="@string/answer"
                 android:textAlignment="center"
