--- a/app/src/main/res/layout/activity_modify_quiz.xml
+++ b/app/src/main/res/layout/activity_modify_quiz.xml
@@ -72,7 +72,8 @@
                 android:layout_span="2"
                 android:layout_weight="1"
                 android:ems="10"
-                android:inputType="textPersonName"
+                android:hint="@string/enterQuizName"
+                android:inputType="textPersonName|textMultiLine"
                 android:text="@string/fillerQuizName"
                 android:textAlignment="center"
                 android:textColor="@color/black"
